--- a/style.css
+++ b/style.css
@@ -1,57 +1,12 @@
-::-webkit-scrollbar {
-  width: 1px;
-  height: 1px;
-}
-
-::-webkit-scrollbar-button {
-  width: 1px;
-  height: 1px;
-}
-
-body {
-  background: #111;
-}
-
-div {
+* {
+  padding: 0;
+  margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-.horizontal-scroll-wrapper {
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  width: calc(100vh + 1px);
-  max-height: 100vh;
-  margin: 0;
-  padding-top: 1px;
-  background: #abc;
-  overflow-y: auto;
-  overflow-x: hidden;
-  -webkit-transform: rotate(-90deg) translateY(-100vh);
-          transform: rotate(-90deg) translateY(-100vh);
-  -webkit-transform-origin: right top;
-          transform-origin: right top;
-}
-
-.horizontal-scroll-wrapper > div {
-  display: block;
-  padding: 5px;
-  background: #cab;
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-  -webkit-transform-origin: right top;
-          transform-origin: right top;
-}
-
-.squares {
-  padding: 100vh 0 0 0;
-}
-
-.squares > div {
-  width: 100vh;
+.wrapper {
   height: 100vh;
-  margin: 10px 0;
+  background-color: #e9c46a;
 }
 /*# sourceMappingURL=style.css.map */
