--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,11 @@
 $primaryColor : rgba(#e9c46a,1);
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing:border-box;
+}
 .wrapper {
-  width:100vh;
-  background:
+  height:100vh;
+  background-color:$primaryColor;
+
 }
