--- a/style.css
+++ b/style.css
@@ -1,12 +1,49 @@
-* {
-  padding: 0;
+html, body {
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  color: gray;
+  background: black;
+  overflow: hidden;
 }
 
-.wrapper {
-  height: 100vh;
-  background-color: #e9c46a;
+.block {
+  position: relative;
+  width: 700px;
+  height: 600px;
+  margin: 10px 300px 20px 80px;
+}
+
+.block h1 {
+  background: transparent;
+  position: absolute;
+  font-size: 65px;
+  font-family: 'Syncopate', sans-serif;
+}
+
+.block:hover {
+  -webkit-transition: 1s all;
+  transition: 1s all;
+}
+
+.block1 {
+  background: url(DendenPic.JPG) no-repeat 50% 50%;
+  background-size: cover;
+}
+
+.block2 {
+  background: url(nedu.jpg) no-repeat 50% 50%;
+  background-size: cover;
+}
+
+.block3 {
+  background: url(nedu2.jpg) no-repeat 50% 50%;
+  background-size: cover;
+}
+
+.container {
+  margin-top: 200px;
+  margin-left: 200px;
 }
 /*# sourceMappingURL=style.css.map */
