--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,47 @@
 $primaryColor : rgba(#e9c46a,1);
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing:border-box;
+html,body {
+  margin:0;
+  padding:0;
+  width:100%;
+  height:100%;
+  color:gray;
+  background:black;
+  overflow: hidden;
 }
-.wrapper {
-  height:100vh;
-  background-color:$primaryColor;
 
+.block {
+  position: relative;
+  width: 700px;
+  height: 600px;
+  margin: 10px 300px 20px 80px;
+  h1 {
+    background: transparent;
+    position: absolute;
+    font-size: 65px;
+    font-family: 'Syncopate', sans-serif;
+  }
+  &:hover {
+    transition: 1s all;
+
+  }
+}
+
+
+
+.block1 {
+  background: url(DendenPic.JPG) no-repeat 50% 50%;
+  background-size: cover;
+}
+.block2 {
+  background: url(nedu.jpg) no-repeat 50% 50%;
+  background-size: cover;
+}
+.block3 {
+  background: url(nedu2.jpg) no-repeat 50% 50%;
+  background-size: cover;
+}
+
+.container {
+  margin-top: 200px;
+  margin-left: 200px;
 }
