--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
-  color: gray;
-  background: black;
+  background: #f4a261;
   overflow: hidden;
 }
 
@@ -12,10 +11,13 @@ html, body {
   position: relative;
   width: 700px;
   height: 600px;
-  margin: 10px 300px 20px 80px;
+  margin: 10px 600px 20px 80px;
+  -webkit-transition: .5s all;
+  transition: .5s all;
 }
 
 .block h1 {
+  color: white;
   background: transparent;
   position: absolute;
   font-size: 65px;
@@ -23,8 +25,26 @@ html, body {
 }
 
 .block:hover {
-  -webkit-transition: 1s all;
-  transition: 1s all;
+  -webkit-transition: .5s all;
+  transition: .5s all;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+header {
+  padding: 1em;
+}
+
+header nav {
+  text-align: center;
+}
+
+header nav li {
+  font-size: 20px;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  display: inline-block;
+  padding: 0 2em;
 }
 
 .block1 {
@@ -45,5 +65,32 @@ html, body {
 .container {
   margin-top: 200px;
   margin-left: 200px;
+}
+
+.splash {
+  font-size: 60px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: black;
+  color: white;
+  z-index: 200;
+  text-align: center;
+  line-height: 90vh;
+  font-family: 'Syncopate', sans-serif;
+}
+
+@-webkit-keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
 }
 /*# sourceMappingURL=style.css.map */
