--- a/style.scss
+++ b/style.scss
@@ -1,33 +1,46 @@
-$primaryColor : rgba(#e9c46a,1);
+$primaryColor : rgba(#f4a261,1);
 html,body {
   margin:0;
   padding:0;
   width:100%;
   height:100%;
-  color:gray;
-  background:black;
+  background:$primaryColor;
   overflow: hidden;
 }
 
 .block {
+
   position: relative;
   width: 700px;
   height: 600px;
-  margin: 10px 300px 20px 80px;
+  margin: 10px 600px 20px 80px;
+  transition: .5s all;
   h1 {
+    color:white;
     background: transparent;
     position: absolute;
     font-size: 65px;
     font-family: 'Syncopate', sans-serif;
   }
   &:hover {
-    transition: 1s all;
-
+    transition: .5s all;
+    transform: scale(1.1);
   }
 }
+header{
 
-
-
+padding:1em;
+nav{
+  text-align: center;
+  li {
+  font-size:20px;
+  color:white;
+  font-family: 'Montserrat', sans-serif;
+  display:inline-block;
+  padding: 0 2em;    
+  }
+}
+}
 .block1 {
   background: url(DendenPic.JPG) no-repeat 50% 50%;
   background-size: cover;
@@ -44,4 +57,29 @@ html,body {
 .container {
   margin-top: 200px;
   margin-left: 200px;
+}
+
+.splash {
+  font-size:60px;
+   position:fixed;
+   top:0;
+   left:0;
+   width:100%;
+   height:100vh;
+   background:black;
+   color:white;
+   z-index: 200;
+   text-align: center;
+   line-height: 90vh;
+   font-family: 'Syncopate', sans-serif;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+
 }
