--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ html, body {
   margin: 10px 600px 20px 80px;
   -webkit-transition: .5s all;
   transition: .5s all;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
 }
 
 .block h1 {
@@ -25,6 +27,8 @@ html, body {
 }
 
 .block:hover {
+  -webkit-filter: grayscale(0%);
+          filter: grayscale(0%);
   -webkit-transition: .5s all;
   transition: .5s all;
   -webkit-transform: scale(1.1);
@@ -74,9 +78,27 @@ header nav li {
   left: 0;
   width: 100%;
   height: 100vh;
-  background: black;
+  background: pink;
   color: white;
   z-index: 200;
+  text-align: center;
+  line-height: 90vh;
+  font-family: 'Syncopate', sans-serif;
+}
+
+.splash.display-none {
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  font-size: 60px;
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: black;
+  color: white;
+  z-index: -10;
   text-align: center;
   line-height: 90vh;
   font-family: 'Syncopate', sans-serif;
@@ -92,5 +114,11 @@ header nav li {
   to {
     opacity: 1;
   }
+}
+
+.fade-in {
+  opacity: 0;
+  -webkit-animation: fadeIn 1s ease-in forwards;
+          animation: fadeIn 1s ease-in forwards;
 }
 /*# sourceMappingURL=style.css.map */
