--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,7 @@ html,body {
   height: 600px;
   margin: 10px 600px 20px 80px;
   transition: .5s all;
+  filter: grayscale(100%);
   h1 {
     color:white;
     background: transparent;
@@ -23,6 +24,7 @@ html,body {
     font-family: 'Syncopate', sans-serif;
   }
   &:hover {
+    filter:grayscale(0%);
     transition: .5s all;
     transform: scale(1.1);
   }
@@ -66,9 +68,26 @@ nav{
    left:0;
    width:100%;
    height:100vh;
-   background:black;
+   background:pink;
    color:white;
    z-index: 200;
+   text-align: center;
+   line-height: 90vh;
+   font-family: 'Syncopate', sans-serif;
+}
+
+.splash.display-none {
+  transition: 0.5s all  ;
+  font-size:60px;
+   position:fixed;
+   opacity:0;
+   top:0;
+   left:0;
+   width:100%;
+   height:100vh;
+   background:black;
+   color:white;
+   z-index: -10;
    text-align: center;
    line-height: 90vh;
    font-family: 'Syncopate', sans-serif;
@@ -81,5 +100,6 @@ nav{
 }
 
 .fade-in {
-
+opacity: 0;
+animation: fadeIn 1s ease-in forwards;
 }
