--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@ html,body {
   &:hover {
     filter:grayscale(0%);
     transition: .5s all;
-    transform: scale(1.1);
+    transform: scale(1.05);
   }
 }
 header{
@@ -57,7 +57,8 @@ nav{
 }
 
 .container {
-  margin-top: 200px;
+  max-width: 100%;
+  margin-top: 300px;
   margin-left: 200px;
 }
 
