--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
-  background: #f4a261;
   overflow: hidden;
+  background: #f4a261;
 }
 
 .block {
@@ -41,9 +41,15 @@ html, body {
   left: 200px;
 }
 
-.block2 h1, .block4 h1 {
+.block:nth-child(even) h1 {
   bottom: 800px;
   left: 200px;
+}
+
+.block:nth-child(even):hover {
+  color: transparent;
+  -webkit-text-stroke: 1px white;
+  text-shadow: none;
 }
 
 header {
