--- a/style.scss
+++ b/style.scss
@@ -67,7 +67,13 @@ nav{
 }
 }
 
-
+.entry {
+  position:relative;
+  bottom:450px; 
+  h1{
+    font-size: 90px;
+  }
+}
 .block1 {
   background: url(DendenPic.JPG) no-repeat 50% 50%;
   background-size: cover;
