--- a/style.scss
+++ b/style.scss
@@ -75,6 +75,7 @@ nav{
   }
 }
 .block1 {
+  margin-left:300px;
   background: url(DendenPic.JPG) no-repeat 50% 50%;
   background-size: cover;
   &:hover {
