--- a/style.css
+++ b/style.css
@@ -9,6 +9,15 @@ html, body {
 
 .block {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 800px;
   height: 600px;
   margin: 10px 600px 20px 80px;
@@ -36,6 +45,26 @@ html, body {
           transform: scale(1.05);
 }
 
+.ccontent {
+  position: absolute;
+  padding-left: 1em;
+}
+
+.card img {
+  position: absolute;
+  bottom: 0;
+  width: 300px;
+  left: 50%;
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
+}
+
+.card:hover img {
+  left: 70%;
+}
+
 .block:nth-child(even) h1 {
   bottom: 700px;
   left: 20px;
@@ -52,7 +81,7 @@ html, body {
 }
 
 .block:nth-child(odd) h1 {
-  top: 600px;
+  top: 500px;
 }
 
 .block:nth-child(odd):hover {
