--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html, body {
 }
 
 .block {
+  border-radius: 10px;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -81,7 +82,7 @@ html, body {
 }
 
 .block:nth-child(odd) h1 {
-  top: 500px;
+  top: 600px;
 }
 
 .block:nth-child(odd):hover {
