--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,6 @@ html,body {
   height: 600px;
   margin: 10px 600px 20px 80px;
   transition: .5s all;
-  filter: grayscale(100%);
   color:white;
   h1 {
     background: transparent;
@@ -28,14 +27,35 @@ html,body {
   &:hover {
  
     color:gray;
-    filter:grayscale(0%);
+    filter:grayscale(100%);
     transition: .5s all;
     transform: scale(1.05);
   }
 }
 .ccontent {
   position: absolute;
-  padding-left: 1em;
+  padding-left: 2em;
+  padding-top: 1em;
+  color: black;
+  -webkit-text-stroke: initial;
+  opacity:0;
+  visibility: hidden;
+  transition: .5 all;
+  h2 {
+    display: block;
+    color:#fff;
+    font-size:3em;
+    text-transform: uppercase;
+  }
+  p {
+    display: inline-block;
+    position:relative;
+    color:#fff;
+  }
+}
+.card:hover .ccontent {
+opacity: 1;
+visibility: visible;
 }
 .card img{
   position:absolute;
@@ -44,10 +64,15 @@ html,body {
   left:50%;
   transform: translateX(50%);
   transition: 0.3s all;
+  opacity: 0;
+  visibility: hidden;
 }
 .card:hover img {
 left:70%;
+opacity: 1;
+visibility: visible;
 }
+
 .block:nth-child(even){
   h1 {
     bottom:700px;
@@ -61,10 +86,11 @@ left:70%;
     transform: translateY(50px);
   }
 }
+
 .block:nth-child(odd){
   h1 {
     top:600px;
-  }
+  }       
   &:hover {
       transform: translateY(-50px);
   }
