habby birthday denden

--- a/style.scss
+++ b/style.scss
@@ -184,3 +184,32 @@ nav{
 opacity: 0;
 animation: fadeIn 1s ease-in forwards;
 }
+
+@media screen and (max-width:768px) {
+.block {
+  width:700px;
+  height:500px;
+}
+.block:nth-child(even) h1 {
+  bottom:550px;
+}
+.block:nth-child(odd) h1 {
+  top:550px;
+}
+}
+@media screen and (max-width:550px)
+{
+  .block {
+    width:5 00px;
+    height:350px;
+  }
+  .block:nth-child(even) h1 {
+    bottom:400px;
+  }
+  .block:nth-child(odd) h1 {
+    top:400px;
+  }
+  .entry h1 {
+    font-size: 75px;
+  }
+}
