--- a/style.scss
+++ b/style.scss
@@ -200,7 +200,7 @@ animation: fadeIn 1s ease-in forwards;
 @media screen and (max-width:550px)
 {
   .block {
-    width:5 00px;
+    width:500px;
     height:350px;
   }
   .block:nth-child(even) h1 {
@@ -209,7 +209,25 @@ animation: fadeIn 1s ease-in forwards;
   .block:nth-child(odd) h1 {
     top:400px;
   }
+
+  .block:nth-child(odd) {
+    bottom:10em;
+  }
   .entry h1 {
     font-size: 75px;
+  }
+}
+
+@media screen and (max-width:400px)
+{
+  .block {
+    width:400px;
+    height:300px;
+  }
+  .block:nth-child(even) h1 {
+    bottom:300px;
+  }
+  .block:nth-child(odd) h1 {
+    top:300px;
   }
 }
