--- a/style.css
+++ b/style.css
@@ -265,5 +265,10 @@ header nav li {
   .block:nth-child(odd) h1 {
     top: 300px;
   }
+  .container {
+    max-width: 100%;
+    margin-top: 200px;
+    margin-left: 200px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
