--- a/style.scss
+++ b/style.scss
@@ -230,4 +230,11 @@ animation: fadeIn 1s ease-in forwards;
   .block:nth-child(odd) h1 {
     top:300px;
   }
+  
+.container {
+  max-width: 100%;
+  margin-top: 200px;
+  margin-left: 200px;
+}
+
 }
