--- a/style.css
+++ b/style.css
@@ -81,8 +81,8 @@ body {
   bottom: 0;
   width: 300px;
   left: 50%;
-  -webkit-transform: translateX(50%);
-          transform: translateX(50%);
+  -webkit-transform: translateX(15px);
+          transform: translateX(15px);
   -webkit-transition: 0.3s all;
   transition: 0.3s all;
   opacity: 0;
@@ -257,9 +257,16 @@ header nav li {
 }
 
 @media screen and (max-width: 450px) {
+  .entry h1 {
+    font-size: 20px;
+  }
   .block {
     width: 500px;
     height: 300px;
+    margin: 200px 50px 20px 0px;
+  }
+  .block h1 {
+    font-size: 20px;
   }
   .block:nth-child(even) h1 {
     bottom: 300px;
@@ -277,8 +284,11 @@ header nav li {
   }
   .container {
     max-width: 100%;
-    margin-top: 200px;
-    margin-left: 200px;
+    margin-top: 0px;
+    margin-left: 20px;
+  }
+  .card img {
+    width: 200px;
   }
 }
 /*# sourceMappingURL=style.css.map */
