--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ body {
   visibility: hidden;
   -webkit-transition: .5 all;
   transition: .5 all;
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
 }
 
 .ccontent h2 {
@@ -71,6 +73,11 @@ body {
   position: relative;
   color: #fff;
   font-family: 'Raleway', sans-serif;
+}
+
+.ccontent:hover {
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
 }
 
 .card:hover .ccontent {
@@ -150,10 +157,15 @@ header nav li {
   margin-left: 300px;
   background: url(DendenPic.JPG) no-repeat 50% 50%;
   background-size: cover;
+  -webkit-transition: .5s all;
+  transition: .5s all;
 }
 
 .block1:hover {
-  background-filter: blur(1px);
+  -webkit-transition: .5s all;
+  transition: .5s all;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
 }
 
 .block2 {
@@ -249,6 +261,7 @@ header nav li {
   .block {
     width: 500px;
     height: 350px;
+    margin: 200px 65px 20px 0px;
   }
   .block:nth-child(even) h1 {
     bottom: 400px;
@@ -264,11 +277,33 @@ header nav li {
   }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 500px) {
+  .block:nth-child(odd) h1 {
+    top: 400px;
+  }
+  .container {
+    margin-top: 100px;
+    margin-left: 10px;
+  }
+  .block {
+    margin: 200px 250px 20px 0px;
+  }
+  .block h1 {
+    font-size: 40px;
+  }
+  .block:nth-child(odd) {
+    bottom: 12em;
+  }
+  .entry h1 {
+    font-size: 25px;
+  }
+}
+
+@media screen and (max-width: 400px) {
   .block {
     width: 500px;
     height: 300px;
-    margin: 200px 65px 20px 0px;
+    margin: 200px 70px 20px 0px;
   }
   .block h1 {
     font-size: 30px;
