--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: #f4a261;
+  background: #151515;
 }
 
 .block {
@@ -115,8 +115,8 @@ body {
   color: transparent;
   -webkit-text-stroke: 1px white;
   text-shadow: none;
-  -webkit-transform: translateY(50px);
-          transform: translateY(50px);
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
 }
 
 .block:nth-child(odd) h1 {
@@ -124,8 +124,8 @@ body {
 }
 
 .block:nth-child(odd):hover {
-  -webkit-transform: translateY(-50px);
-          transform: translateY(-50px);
+  -webkit-transform: translateY(-60px);
+          transform: translateY(-60px);
 }
 
 header {
@@ -175,6 +175,11 @@ header nav li {
 
 .block3 {
   background: url(nedu2.jpg) no-repeat 50% 50%;
+  background-size: cover;
+}
+
+.block4 {
+  background: url(denden1.JPG) no-repeat 50% 50%;
   background-size: cover;
 }
 
@@ -239,15 +244,39 @@ header nav li {
 }
 
 @media screen and (max-width: 768px) {
+  .container {
+    margin-top: 150px;
+    margin-left: 5px;
+  }
   .block {
     width: 700px;
-    height: 500px;
+    height: 400px;
+    margin: 20px 65px 20px 10px;
+  }
+  .block h1 {
+    font-size: 3em;
   }
   .block:nth-child(even) h1 {
-    bottom: 550px;
+    bottom: -300px;
+  }
+  .block:nth-child(even) h1:hover {
+    -webkit-transform: translateY(-610px);
+            transform: translateY(-610px);
   }
   .block:nth-child(odd) h1 {
-    top: 550px;
+    top: 700px;
+    left: 50px;
+  }
+  .block:nth-child(odd) h1:hover {
+    -webkit-transform: translateY(-610px);
+            transform: translateY(-610px);
+  }
+  .entry {
+    position: relative;
+  }
+  .entry h1 {
+    position: absolute;
+    font-size: 2.5em;
   }
 }
 
